--- a/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.scss
+++ b/frontend/src/app/core/components/admin/faculty-pref/faculty-pref.component.scss
@@ -1,11 +1,11 @@
-@import "../../../../../styles/mixins.scss";
+@use "../../../../../styles/mixins.scss";
 
 * {
-  @include reset-styles;
+  @include mixins.reset-styles;
 }
 
 .faculty-pref-container {
-  @include flex-layout(
+  @include mixins.flex-layout(
     $direction: column,
     $align: stretch,
     $justify: flex-start,
@@ -15,22 +15,22 @@
 }
 
 .faculty-pref-table-container {
-  @include flex-layout($direction: column, $align: none, $justify: none);
-  @include hide-scrollbar;
+  @include mixins.flex-layout($direction: column, $align: none, $justify: none);
+  @include mixins.hide-scrollbar;
   overflow: auto;
   position: relative;
   border-radius: var(--border-radius-md);
   box-shadow: var(--shadow-level-1);
 
   .table-container {
-    @include hide-scrollbar;
+    @include mixins.hide-scrollbar;
     display: flex;
     flex-direction: column;
     background-color: var(--neutral-light);
     max-height: 50rem;
 
     .custom-table {
-      @include default-transition;
+      @include mixins.default-transition;
       background-color: var(--neutral-light);
 
       .table-button {
@@ -132,7 +132,7 @@
       padding: var(--spacing-lg);
 
       .flex-cell {
-        @include flex-layout(
+        @include mixins.flex-layout(
           $align: center,
           $justify: center,
           $gap: var(--spacing-xs)
