--- a/frontend/src/app/shared/schedule-timeline/schedule-timeline.component.scss
+++ b/frontend/src/app/shared/schedule-timeline/schedule-timeline.component.scss
@@ -1,18 +1,40 @@
-@import "../../../styles/mixins.scss";
+@use "sass:list";
+@use "../../../styles/mixins.scss";
 
 $day-colors: (
-  monday: (var(--primary-text), var(--primary-text-two)),
-  tuesday: (var(--secondary-text), var(--secondary-text-two)),
-  wednesday: (var(--blue-primary), var(--blue-text)),
-  thursday: (var(--aqua-primary), var(--aqua-text)),
-  friday: (var(--purple-primary), var(--purple-text)),
-  saturday: (var(--green-primary), var(--green-text)),
-  sunday: (var(--primary-text), var(--primary-text-two))
+  monday: (
+    var(--primary-text),
+    var(--primary-text-two),
+  ),
+  tuesday: (
+    var(--secondary-text),
+    var(--secondary-text-two),
+  ),
+  wednesday: (
+    var(--blue-primary),
+    var(--blue-text),
+  ),
+  thursday: (
+    var(--aqua-primary),
+    var(--aqua-text),
+  ),
+  friday: (
+    var(--purple-primary),
+    var(--purple-text),
+  ),
+  saturday: (
+    var(--green-primary),
+    var(--green-text),
+  ),
+  sunday: (
+    var(--primary-text),
+    var(--primary-text-two),
+  ),
 );
 
 @each $day, $colors in $day-colors {
-  $primary-color: nth($colors, 1);
-  $text-color: nth($colors, 2);
+  $primary-color: list.nth($colors, 1);
+  $text-color: list.nth($colors, 2);
 
   .schedule-content.schedule-#{$day} .course {
     color: #{$primary-color};
@@ -27,7 +49,7 @@ $day-colors: (
 }
 
 .schedule-timeline-container {
-  @include hide-scrollbar;
+  @include mixins.hide-scrollbar;
   height: 100%;
   width: 100%;
   overflow-y: auto;
@@ -35,7 +57,7 @@ $day-colors: (
   border-radius: var(--border-radius-md);
 
   .schedule-timeline-table {
-    @include default-transition;
+    @include mixins.default-transition;
     width: 100%;
     border-collapse: separate;
     border-spacing: 0;
@@ -49,7 +71,7 @@ $day-colors: (
     }
 
     .schedule-timeline-table-header {
-      @include sticky;
+      @include mixins.sticky;
       background-color: var(--primary-one);
       z-index: 2;
 
@@ -77,7 +99,7 @@ $day-colors: (
       }
 
       .time-slot {
-        @include default-transition;
+        @include mixins.default-transition;
         font-weight: 500;
         border-right: 1px solid var(--neutral-fade);
         background-color: var(--neutral-space);
@@ -98,8 +120,8 @@ $day-colors: (
           }
 
           .schedule-content {
-            @include hide-scrollbar;
-            @include flex-layout(
+            @include mixins.hide-scrollbar;
+            @include mixins.flex-layout(
               $direction: column,
               $align: center,
               $justify: flex-start,
