--- a/frontend/src/app/core/components/faculty/preferences/preferences.component.scss
+++ b/frontend/src/app/core/components/faculty/preferences/preferences.component.scss
@@ -1,32 +1,32 @@
-@import "../../../../../styles/mixins";
+@use "../../../../../styles/mixins";
 
 * {
-  @include reset-styles;
+  @include mixins.reset-styles;
 }
 
 :host {
-  @include custom-spinner;
-  @include custom-spinner-two();
+  @include mixins.custom-spinner;
+  @include mixins.custom-spinner-two();
 }
 
 .faculty-preferences-container {
-  @include flex-layout(
+  @include mixins.flex-layout(
     $direction: column,
     $align: stretch,
     $justify: flex-start,
     $gap: var(--spacing-md)
   );
-  @include default-transition;
+  @include mixins.default-transition;
   height: 100%;
   position: relative;
 }
 
 /* First row - Header & Units Cards */
 .preferences-row-one {
-  @include flex-layout($justify: space-between, $gap: var(--spacing-lg));
+  @include mixins.flex-layout($justify: space-between, $gap: var(--spacing-lg));
 
   #preferences_title {
-    @include flex-layout(
+    @include mixins.flex-layout(
       $direction: column,
       $align: none,
       $justify: none,
@@ -41,7 +41,7 @@
     }
 
     h1 {
-      @include gradient-primary(315deg);
+      @include mixins.gradient-primary(315deg);
       font-size: var(--font-size-2xxl);
       font-weight: 700;
       background-clip: text;
@@ -68,13 +68,13 @@
   }
 
   #total_container {
-    @include flex-layout;
+    @include mixins.flex-layout;
     gap: var(--spacing-sm);
     height: 100%;
     text-align: center;
 
     .total {
-      @include flex-layout($direction: column);
+      @include mixins.flex-layout($direction: column);
       height: inherit;
       border-radius: var(--border-radius-md);
       padding: var(--spacing-md);
@@ -90,18 +90,18 @@
     }
 
     .units {
-      @include gradient-primary(315deg);
+      @include mixins.gradient-primary(315deg);
     }
 
     .hours {
-      @include gradient-secondary(315deg);
+      @include mixins.gradient-secondary(315deg);
     }
   }
 }
 
 /* Second Row - Course List and Table */
 .preferences-row-two {
-  @include flex-layout($gap: var(--spacing-lg));
+  @include mixins.flex-layout($gap: var(--spacing-lg));
   height: calc(100vh - 18rem);
   box-sizing: border-box;
 
@@ -130,7 +130,7 @@
     }
 
     .clear-filter {
-      @include flex-layout($direction: row-reverse);
+      @include mixins.flex-layout($direction: row-reverse);
     }
 
     #courses_list,
@@ -139,7 +139,7 @@
     #empty-results {
       flex: 1;
       overflow: hidden;
-      @include flex-layout($direction: column, $align: stretch);
+      @include mixins.flex-layout($direction: column, $align: stretch);
 
       .arrow_back {
         cursor: pointer;
@@ -151,7 +151,7 @@
       }
 
       .cards-label {
-        @include flex-layout($justify: flex-start, $gap: var(--spacing-sm));
+        @include mixins.flex-layout($justify: flex-start, $gap: var(--spacing-sm));
         font-weight: 500;
         margin-bottom: 1rem;
 
@@ -175,22 +175,22 @@
 
     .courses-scroll-container,
     .programs-scroll-container {
-      @include custom-scrollbar;
+      @include mixins.custom-scrollbar;
       flex: 1;
       overflow-y: auto;
       padding-right: var(--spacing-xs);
 
       .progress-wrapper {
         height: 100%;
-        @include flex-layout;
+        @include mixins.flex-layout;
       }
     }
 
     .course-card,
     .program-card {
-      @include default-transition;
-      @include gradient-soft-secondary(30deg);
-      @include flex-layout($justify: space-between);
+      @include mixins.default-transition;
+      @include mixins.gradient-soft-secondary(30deg);
+      @include mixins.flex-layout($justify: space-between);
       padding: var(--spacing-sm);
       margin-bottom: var(--spacing-xs);
       border-radius: var(--border-radius-sm);
@@ -215,7 +215,7 @@
 
       .course-code,
       .program-code {
-        @include default-transition;
+        @include mixins.default-transition;
         font-weight: 600;
         font-size: var(--font-size-md);
         color: var(--neutral-base);
@@ -228,7 +228,7 @@
       }
 
       .add-button {
-        @include flex-layout;
+        @include mixins.flex-layout;
         color: var(--neutral-base);
       }
     }
@@ -237,44 +237,44 @@
 
 /* Preferences Table Styling */
 #table_container {
-  @include default-transition;
-  @include hide-scrollbar;
-  @include flex-layout($direction: column, $align: none, $justify: none);
+  @include mixins.default-transition;
+  @include mixins.hide-scrollbar;
+  @include mixins.flex-layout($direction: column, $align: none, $justify: none);
   flex: 5;
   overflow: auto;
   background-color: var(--neutral-light);
 
   .table-main {
-    @include default-transition;
+    @include mixins.default-transition;
     width: 100%;
     background-color: var(--neutral-light);
     table-layout: fixed;
   }
 
   .table-header {
-    @include sticky;
+    @include mixins.sticky;
     color: white;
     text-align: center;
     background-color: var(--primary-one);
   }
 
   .table-cell {
-    @include default-transition;
+    @include mixins.default-transition;
     padding: var(--spacing-sm);
     text-wrap: wrap;
     text-align: center;
     background-color: var(--neutral-light);
 
     .day-time-button-container {
-      @include flex-layout($justify: flex-start);
+      @include mixins.flex-layout($justify: flex-start);
 
       .day-time-button {
-        @include flex-layout;
+        @include mixins.flex-layout;
         color: var(--primary-text);
       }
 
       mat-icon {
-        @include flex-layout;
+        @include mixins.flex-layout;
         padding: var(--spacing-sm);
       }
     }
@@ -288,19 +288,19 @@
     }
 
     .remove-button {
-      @include flex-layout;
+      @include mixins.flex-layout;
 
       span[mat-symbol] {
         font-size: var(--font-size-lg);
         color: var(--primary-text);
-        @include flex-layout;
+        @include mixins.flex-layout;
       }
     }
   }
 
   .no-data-text {
-    @include default-transition;
-    @include flex-layout($gap: var(--spacing-xs));
+    @include mixins.default-transition;
+    @include mixins.flex-layout($gap: var(--spacing-xs));
     width: 100%;
     text-align: center;
     background-color: var(--neutral-light);
@@ -317,14 +317,14 @@
   }
 
   .table-footer {
-    @include default-transition;
-    @include flex-layout($justify: space-between, $gap: var(--spacing-xs));
-    @include sticky;
+    @include mixins.default-transition;
+    @include mixins.flex-layout($justify: space-between, $gap: var(--spacing-xs));
+    @include mixins.sticky;
     margin-top: auto;
     background-color: var(--neutral-bar);
 
     .button-container {
-      @include flex-layout($gap: var(--spacing-sm));
+      @include mixins.flex-layout($gap: var(--spacing-sm));
       padding: var(--spacing-sm) var(--spacing-sm);
       font-weight: 500;
       user-select: none;
@@ -357,7 +357,7 @@
 }
 
 .preferences-closed {
-  @include flex-layout($direction: column, $align: center, $justify: center);
+  @include mixins.flex-layout($direction: column, $align: center, $justify: center);
   opacity: var(--opacity-semi-opaque);
   height: 100%;
 
@@ -367,11 +367,11 @@
   }
 
   .closed-info {
-    @include flex-layout($direction: column, $gap: var(--spacing-lg));
+    @include mixins.flex-layout($direction: column, $gap: var(--spacing-lg));
   }
 
   .closed-text {
-    @include flex-layout($gap: var(--spacing-xs));
+    @include mixins.flex-layout($gap: var(--spacing-xs));
     font-size: var(--font-size-md);
     text-align: center;
 
@@ -419,7 +419,7 @@
 /* Media Query */
 @media screen and (max-width: 1024px) {
   * {
-    @include hide-scrollbar;
+    @include mixins.hide-scrollbar;
   }
 
   #courses_container {
@@ -427,7 +427,7 @@
   }
 
   .preferences-row-one {
-    @include flex-layout(
+    @include mixins.flex-layout(
       $direction: column,
       $align: stretch,
       $gap: var(--spacing-lg)
@@ -441,7 +441,7 @@
   }
 
   .preferences-row-two {
-    @include flex-layout(
+    @include mixins.flex-layout(
       $direction: column,
       $align: stretch,
       $gap: var(--spacing-lg)
