--- a/frontend/src/app/core/components/superadmin/management/admin/admin.component.scss
+++ b/frontend/src/app/core/components/superadmin/management/admin/admin.component.scss
@@ -1,19 +1,18 @@
-@import "../../../../../../styles/mixins"; 
+@use "../../../../../../styles/mixins";
 
 .admin-management-container {
-  @include default-transition;
+  @include mixins.default-transition;
   display: flex;
   flex-direction: column;
   gap: var(--spacing-xs);
   height: 100%;
 }
-  
+
 .admin-table-container {
-  @include flex-layout($direction: column, $align: none, $justify: none);
-  @include hide-scrollbar;
+  @include mixins.flex-layout($direction: column, $align: none, $justify: none);
+  @include mixins.hide-scrollbar;
   flex: 1;
   overflow: auto;
   position: relative;
   border-radius: var(--border-radius-md);
 }
-  
