--- a/frontend/src/app/core/components/superadmin/management/faculty/faculty.component.scss
+++ b/frontend/src/app/core/components/superadmin/management/faculty/faculty.component.scss
@@ -1,16 +1,16 @@
-@import "../../../../../../styles/mixins"; 
+@use "../../../../../../styles/mixins";
 
 .faculty-management-container {
-  @include default-transition;
+  @include mixins.default-transition;
   display: flex;
   flex-direction: column;
   gap: var(--spacing-xs);
   height: 100%;
 }
-  
+
 .faculty-table-container {
-  @include flex-layout($direction: column, $align: none, $justify: none);
-  @include hide-scrollbar;
+  @include mixins.flex-layout($direction: column, $align: none, $justify: none);
+  @include mixins.hide-scrollbar;
   flex: 1;
   overflow: auto;
   position: relative;
