--- a/frontend/src/app/shared/dialog-day-time/dialog-day-time.component.scss
+++ b/frontend/src/app/shared/dialog-day-time/dialog-day-time.component.scss
@@ -1,7 +1,7 @@
-@import "../../../styles/mixins.scss";
+@use "../../../styles/mixins.scss";
 
 .dialog-day-time-container {
-  @include flex-layout(
+  @include mixins.flex-layout(
     $direction: column,
     $align: stretch,
     $justify: flex-start,
@@ -34,7 +34,7 @@
   }
 
   .day-buttons-container {
-    @include flex-layout(
+    @include mixins.flex-layout(
       $justify: space-between,
       $align: stretch,
       $gap: var(--spacing-sm)
@@ -47,7 +47,7 @@
   }
 
   .day-button {
-    @include flex-layout;
+    @include mixins.flex-layout;
     font-size: var(--font-size-sm);
     width: var(--font-size-md);
     aspect-ratio: 1 / 1;
@@ -69,7 +69,7 @@
       right: 0;
       bottom: 0;
       border-radius: 50%;
-      @include gradient-primary(315deg);
+      @include mixins.gradient-primary(315deg);
       opacity: 0;
       transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
       z-index: -1;
@@ -95,12 +95,12 @@
   }
 
   .time-fields {
-    @include flex-layout($gap: var(--spacing-md));
+    @include mixins.flex-layout($gap: var(--spacing-md));
   }
 }
 
 .dialog-actions {
-  @include flex-layout(
+  @include mixins.flex-layout(
     $align: center,
     $justify: flex-end,
     $gap: var(--spacing-sm)
@@ -111,7 +111,7 @@
   }
 
   .confirm-button {
-    @include gradient-primary(315deg);
+    @include mixins.gradient-primary(315deg);
   }
 
   .confirm-btn-disabled {
