--- a/frontend/src/styles/error.scss
+++ b/frontend/src/styles/error.scss
@@ -1,7 +1,7 @@
-@import "mixins.scss";
+@use "mixins.scss";
 
 .error-page-container {
-  @include flex-layout(
+  @include mixins.flex-layout(
     $direction: column,
     $align: center,
     $justify: space-between
@@ -15,7 +15,7 @@
 
 .error-header {
   width: inherit;
-  @include flex-layout($align: center, $justify: flex-start);
+  @include mixins.flex-layout($align: center, $justify: flex-start);
   gap: var(--spacing-lg);
   // border: 1px solid white;
 
@@ -45,13 +45,13 @@
 }
 
 .error-main-container {
-  @include flex-layout($align: stretch, $justify: center);
+  @include mixins.flex-layout($align: stretch, $justify: center);
   flex: 1;
   width: inherit;
   gap: var(--spacing-lg);
 
   .error-content {
-    @include flex-layout(
+    @include mixins.flex-layout(
       $direction: column,
       $align: flex-start,
       $justify: center,
@@ -62,8 +62,8 @@
 
     .error-text {
       .error-title {
-        @include gradient-primary-text(315deg);
-        @include reset-styles;
+        @include mixins.gradient-primary-text(315deg);
+        @include mixins.reset-styles;
         font-size: var(--font-size-3xl);
       }
 
@@ -74,7 +74,7 @@
     }
 
     .goto-button {
-      @include flex-layout($direction: row-reverse, $gap: var(--spacing-md));
+      @include mixins.flex-layout($direction: row-reverse, $gap: var(--spacing-md));
       align-self: start;
       padding: var(--spacing-sm) var(--spacing-lg);
       font-size: var(--font-size-md);
