--- a/frontend/src/styles/mixins.scss
+++ b/frontend/src/styles/mixins.scss
@@ -88,8 +88,11 @@
   border: $width solid transparent;
   background-clip: padding-box, border-box;
   background-origin: padding-box, border-box;
-  background-image: 
-    linear-gradient(to bottom, var(--neutral-light), var(--neutral-light)), 
+  background-image: linear-gradient(
+      to bottom,
+      var(--neutral-light),
+      var(--neutral-light)
+    ),
     linear-gradient(
       $degree,
       var(--gradient-light-start) 0%,
