--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -4,7 +4,8 @@
 @use "styles/mixins";
 @use "styles/fonts";
 
-@include mat.core();
+@include mat.elevation-classes();
+@include mat.app-background();
 
 :root {
   // Typography
