--- a/frontend/src/app/shared/dialog-schedule-history/dialog-schedule-history.component.scss
+++ b/frontend/src/app/shared/dialog-schedule-history/dialog-schedule-history.component.scss
@@ -1,4 +1,4 @@
-@use "../../../styles/mixins.scss";
+@use "../../../styles/mixins";
 
 .dialog-schedule-history-container {
   @include mixins.flex-layout(
