--- a/frontend/src/app/shared/dialog-view-schedule/dialog-view-schedule.component.scss
+++ b/frontend/src/app/shared/dialog-view-schedule/dialog-view-schedule.component.scss
@@ -1,4 +1,4 @@
-@use "../../../styles/mixins.scss";
+@use "../../../styles/mixins";
 
 .dialog-view-schedule-container {
   @include mixins.flex-layout(
