--- a/frontend/src/app/shared/table-generic/table-generic.component.scss
+++ b/frontend/src/app/shared/table-generic/table-generic.component.scss
@@ -1,4 +1,4 @@
-@use "../../../styles/mixins.scss";
+@use "../../../styles/mixins";
 
 .table-heading {
   @include mixins.flex-layout($align: center, $justify: space-between);
