--- a/frontend/src/app/shared/dialog-scheduling/dialog-scheduling.component.html
+++ b/frontend/src/app/shared/dialog-scheduling/dialog-scheduling.component.html
@@ -56,7 +56,7 @@
         <div class="day-buttons-container">
           @for (day of dayButtons; track day.name) {
           <div
-            class="day-button pop-small"
+            class="day-button"
             [class.selected]="day.name === selectedDay"
             [class.original-day]="
               day.name === originalDay && day.name !== selectedDay
